# droid-wrap

./: .gitignore  Cargo.toml  README.md  debug.bat  publish.cmd
.github/workflows/: rust.yml
aapt2/: Cargo.toml  README.md
aapt2/src/: main.rs
derive/: Cargo.toml
derive/src/: lib.rs  utils.rs
example/: Cargo.toml
example/src/: activity.rs  java.rs  lib.rs
macros/: Cargo.toml
macros/src/: entry.rs  java.rs  lib.rs  utils.rs
src/: android.rs  lib.rs
src/android/: app.rs  content.rs  graphics.rs  hardware.rs  media.rs  os.rs  provider.rs  renderscript.rs  speech.rs  text.rs  view.rs  widget.rs
src/android/content/: pm.rs
src/android/hardware/: vibrator.rs
src/android/speech/: tts.rs
src/android/view/: inputmethod.rs
src/dalvik/: system.rs
src/java/: io.rs  lang.rs  nio.rs
src/java/lang/: reflect.rs
src/java/nio/: file.rs
tests/: Cargo.toml
tests/src/: lib.rs
utils/: Cargo.toml  build.rs
utils/src/: error.rs  lib.rs
