[package]
name = "droid-wrap"
authors.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

[workspace.package]
authors = ["mzdk100 <mzdk100@foxmail.com>"]
description = "用于Rust的Android API的高级封装"
keywords = ["android", "api", "sdk", "jni", "java"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://gitcode.net/mzdk100/droid-wrap.git"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[features]
android = []
android_app = ["android", "java_lang"]
java = []
java_lang = ["java"]

[dependencies]

[dependencies.droid-wrap-utils]
version = "*"
path = "utils"

[dependencies.droid-wrap-derive]
version = "*"
path="derive"

[workspace]
members = ["derive", "example", "utils"]
resolver = "2"
