[package]
name = "droid-wrap"
description.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

[workspace.package]
authors = ["mzdk100 <mzdk100@foxmail.com>"]
description = "用于Rust的Android API的高级封装"
keywords = ["android", "api", "sdk", "jni", "java"]
license = "Apache-2.0"
version = "0.1.1"
edition = "2021"
readme = "README.md"
repository = "https://gitcode.net/mzdk100/droid-wrap.git"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[features]
android = ["java_lang"]
android_app = ["android", "java_lang"]
android_content = ["android"]
android_view = ["android"]
java = []
java_lang = ["java"]
test = []
test_android_app = ["android_app"]
test_android_content = ["android_app", "android_content"]
test_android_view = ["android_content", "android_view"]
test_java_lang = ["java_lang"]

[dependencies]

[dependencies.droid-wrap-utils]
version = "0.1.1"
path = "utils"

[dependencies.droid-wrap-derive]
version = "0.1.1"
path="derive"

[workspace]
members = ["derive", "example", "utils", "tests"]
resolver = "2"
