[package]
name = "droid-wrap"
description.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

[workspace.package]
authors = ["mzdk100 <mzdk100@foxmail.com>"]
description = "用于Rust的Android API的高级封装"
keywords = ["android", "api", "sdk", "jni", "java"]
license = "Apache-2.0"
version = "0.1.3"
edition = "2021"
readme = "README.md"
repository = "https://gitcode.net/mzdk100/droid-wrap.git"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[features]
android = ["java_lang"]
android_app = ["android", "java_lang"]
android_content = ["android", "android_media", "java_lang"]
android_media = ["android"]
android_os = ["android"]
android_speech = ["android"]
android_speech_tts = ["android_speech", "android_os", "java_lang"]
android_view = ["android"]
android_widget = ["android", "java_lang"]
dalvik = []
dalvik_system = ["dalvik", "java_lang", "java_nio"]
java = []
java_lang = ["java"]
java_lang_reflect = ["java_lang"]
java_nio = ["java"]
test = []
test_android_app = ["android_app"]
test_android_content = ["android_content"]
test_android_os = ["android_app", "android_os"]
test_android_view = ["android_content", "android_view"]
test_android_widget = ["android_content", "android_widget"]
test_android_speech = ["android_speech"]
test_android_speech_tts = ["android_content", "android_speech_tts"]
test_dalvik_system = ["dalvik_system", "android_app", "android_content"]
test_java_lang = ["java_lang"]
test_java_lang_reflect = ["java_lang_reflect"]
test_java_nio = ["java_nio"]

[dependencies]

[dependencies.droid-wrap-utils]
version = "0.1.3"
path = "utils"

[dependencies.droid-wrap-derive]
version = "0.1.3"
path="derive"

[workspace]
members = ["derive", "example", "utils", "tests"]
resolver = "2"
