[package]
name = "droid-wrap-derive"
authors.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.85"
quote = "1.0.36"

[dependencies.syn]
features = ["full"]
version = "2.0.66"

[lib]
proc-macro = true