[package]
name = "droid-wrap-derive"
description.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"

[dependencies.syn]
features = ["full"]
version = "2.0.98"

[lib]
proc-macro = true