[package]
name = "droid-wrap-example"
description.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 35
max_sdk_version = 35

[[example]]
name = "activity-example"
crate-type = ["dylib"]
path = "src/activity.rs"

[[example]]
name = "java-example"
crate-type = ["dylib"]
path = "src/java.rs"

[dependencies]
mobile-entry-point = "0.1.1"
ndk-glue = "0.7.0"

[dependencies.droid-wrap]
features = ["android_app", "android_content", "android_widget"]
path = ".."