[package]
name = "droid-wrap-example"
description.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
publish = false

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 36
max_sdk_version = 36

[[example]]
name = "activity-example"
crate-type = ["dylib"]
path = "src/activity.rs"

[[example]]
name = "java-example"
crate-type = ["dylib"]
path = "src/java.rs"

[package.metadata.android.application]
# needed
has_code = false

[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"

[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"
# value = "droid_wrap_example"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.VIEW", "android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[dependencies]
ndk-glue.workspace = true

[dependencies.droid-wrap]
features = ["android_app", "android_content", "android_widget"]
path = ".."