[package]
name = "droid-wrap-macros"
description.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true

[dependencies.syn]
features = ["full"]
workspace = true

[lib]
proc-macro = true