[package]
name = "droid-wrap-test"
description.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

[[package.metadata.android.queries.intent]]
actions = ["android.intent.action.TTS_SERVICE"]

[features]
android = ["droid-wrap/android_app"]
android_app = ["android", "droid-wrap/test_android_app"]
android_content = ["android", "droid-wrap/test_android_content"]
android_speech = ["android", "droid-wrap/test_android_speech"]
android_speech_tts = ["android_speech", "droid-wrap/test_android_speech_tts"]
android_view = ["android", "droid-wrap/test_android_view"]
android_widget = ["android", "droid-wrap/test_android_widget"]
dalvik = []
dalvik_system = ["dalvik", "droid-wrap/test_dalvik_system"]
java = []
java_lang = ["java", "droid-wrap/test_java_lang"]
java_lang_reflect = ["java_lang", "droid-wrap/test_java_lang_reflect"]
java_nio = ["java", "droid-wrap/test_java_nio"]

[lib]
crate-type = ["dylib"]

[dependencies]
mobile-entry-point = "0.1.1"
ndk-glue = "0.7.0"

[dependencies.droid-wrap]
optional = true
path = ".."