[package]
name = "droid-wrap-test"
description.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
publish = false
readme.workspace = true
repository.workspace = true

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 36
max_sdk_version = 36

[[package.metadata.android.uses_feature]]
name = "android.hardware.camera"
required = false

[[package.metadata.android.queries.intent]]
actions = ["android.intent.action.TTS_SERVICE"]

[[package.metadata.android.uses_permission]]
name = "android.permission.CAMERA"

[[package.metadata.android.uses_permission]]
name = "android.permission.VIBRATE"

[package.metadata.android.application]
# needed
has_code = false

[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"

[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"
value = "droid_wrap_test"

[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.VIEW", "android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[features]
android = ["droid-wrap/android_app"]
android_app = ["android", "droid-wrap/test_android_app"]
android_content = ["android", "droid-wrap/test_android_content"]
android_hardware = ["android", "droid-wrap/test_android_hardware"]
android_os = ["android", "droid-wrap/test_android_os"]
android_provider = ["android", "droid-wrap/test_android_provider"]
android_speech = ["android", "droid-wrap/test_android_speech"]
android_speech_tts = ["android_speech", "droid-wrap/test_android_speech_tts"]
android_text = ["android", "droid-wrap/test_android_text"]
android_view = ["android", "droid-wrap/test_android_view"]
android_view_inputmethod = ["android_view", "droid-wrap/test_android_view_inputmethod"]
android_widget = ["android", "droid-wrap/test_android_widget"]
dalvik = []
dalvik_system = ["dalvik", "droid-wrap/test_dalvik_system"]
java = []
java_io = ["java", "droid-wrap/test_java_io"]
java_lang = ["java", "droid-wrap/test_java_lang"]
java_lang_reflect = ["java_lang", "droid-wrap/test_java_lang_reflect"]
java_nio = ["java", "droid-wrap/test_java_nio"]

[lib]
crate-type = ["dylib"]

[dependencies]
ndk-glue.workspace = true

[dependencies.droid-wrap]
optional = true
path = ".."