[package]
name = "droid-wrap-utils"
description.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
jni = "0.21.1"
ndk-context = "0.1.1"
log = "0.4.21"

[build-dependencies]
android-build = "0.1.0"
noak = "0.6.1"
