[package]
name = "droid-wrap-utils"
description.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
jni.workspace = true
ndk-context.workspace = true
log.workspace = true
parking_lot.workspace = true

[build-dependencies]
android-build.workspace = true
noak.workspace = true
cargo-emit.workspace = true

